[workspace]
members = ["tracing-gcp/with-log4rs", "tracing-gcp/with-tracing"]
resolver = "3"

[workspace.package]
edition = "2024"


[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.141" }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.41" }
