[package]
name = "with-log4rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1", features = ["full"] }
log = { version = "0.4.27" }
chrono = { version = "0.4.41" }
anyhow = { version = "1.0" }
log4rs = { version = "1.3" }
