[package]
name = "with-tracing"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.41" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
